--- a/elastic-job-example/pom.xml
+++ b/elastic-job-example/pom.xml
@@ -5,7 +5,7 @@
     <groupId>com.dangdang</groupId>
     <name>${project.artifactId}</name>
     <packaging>pom</packaging>
-    <version>2.1.5</version>
+    <version>2.1.5-SNAPSHOT</version>
     
     <modules>
         <module>elastic-job-example-jobs</module>
@@ -22,7 +22,8 @@
         <java.version>1.7</java.version>
         <elastic-job.version>2.1.5</elastic-job.version>
         <curator.version>2.10.0</curator.version>
-        <springframework.version>4.3.4.RELEASE</springframework.version>
+        <springframework.version>5.1.5.RELEASE</springframework.version>
+        <!--<springframework.version>4.3.4.RELEASE</springframework.version>-->
         <slf4j.version>1.7.7</slf4j.version>
         <logback.version>1.1.2</logback.version>
         <commons-dbcp.version>1.4</commons-dbcp.version>
