--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.dangdang</groupId>
     <artifactId>elastic-job</artifactId>
-    <version>2.1.5</version>
+    <version>2.1.5-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>${project.artifactId}</name>
     <description>Elastic-Job - distributed scheduled job solution</description>
@@ -11,7 +11,7 @@
     <modules>
         <module>elastic-job-common</module>
         <module>elastic-job-lite</module>
-        <module>elastic-job-cloud</module>
+        <!--<module>elastic-job-cloud</module>-->
     </modules>
     
     <properties>
@@ -20,13 +20,16 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.build.locale>zh_CN</project.build.locale>
         
-        <springframework.version>[3.1.0.RELEASE,5.0.0.M1)</springframework.version>
-        
+        <!--<springframework.version>[3.1.0.RELEASE,5.1.5.RELEASE)</springframework.version>-->
+        <springframework.version>5.1.5.RELEASE</springframework.version>
+
         <lombok.version>1.16.4</lombok.version>
         <guava.version>18.0</guava.version>
         <commons-lang3.version>3.4</commons-lang3.version>
         <quartz.version>2.2.1</quartz.version>
-        <curator.version>2.10.0</curator.version>
+        <!--<curator.version>2.10.0</curator.version>-->
+        <curator.version>4.1.0</curator.version>
+        <zookeeper.version>3.4.13</zookeeper.version>
         <aspectj.version>1.8.0</aspectj.version>
         <slf4j.version>1.7.7</slf4j.version>
         <logback.version>1.1.2</logback.version>
@@ -68,7 +71,7 @@
         <maven-pmd-plugin.version>3.5</maven-pmd-plugin.version>
         <jdepend-maven-plugin.version>2.0</jdepend-maven-plugin.version>
         <taglist-maven-plugin.version>2.4</taglist-maven-plugin.version>
-        <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
+        <!--<maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>-->
         
         <javadocExecutable>${java.home}/../bin/javadoc</javadocExecutable>
     </properties>
@@ -122,6 +125,11 @@
                 <artifactId>curator-test</artifactId>
                 <version>${curator.version}</version>
                 <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.zookeeper</groupId>
+                <artifactId>zookeeper</artifactId>
+                <version>${zookeeper.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
@@ -188,7 +196,7 @@
                 <artifactId>jackson-annotations</artifactId>
                 <version>${jackson.version}</version>
             </dependency>
-            <dependency>
+            <!--<dependency>
                 <groupId>org.freemarker</groupId>
                 <artifactId>freemarker</artifactId>
                 <version>${freemarker.version}</version>
@@ -197,7 +205,7 @@
                 <groupId>opensymphony</groupId>
                 <artifactId>sitemesh</artifactId>
                 <version>${sitemesh.version}</version>
-            </dependency>
+            </dependency>-->
             <dependency>
                 <groupId>commons-codec</groupId>
                 <artifactId>commons-codec</artifactId>
@@ -218,12 +226,12 @@
                 <artifactId>fenzo-core</artifactId>
                 <version>${fenzo.version}</version>
             </dependency>
-            <dependency>
+            <!--<dependency>
                 <groupId>javax</groupId>
                 <artifactId>javaee-web-api</artifactId>
                 <version>${javaee-web-api.version}</version>
                 <scope>provided</scope>
-            </dependency>
+            </dependency>-->
             <dependency>
                 <groupId>com.google.code.gson</groupId>
                 <artifactId>gson</artifactId>
@@ -345,7 +353,7 @@
                         </excludes>
                     </configuration>
                 </plugin>
-                <plugin>
+                <!--<plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-report-plugin</artifactId>
                     <version>${maven-surefire-report-plugin.version}</version>
@@ -408,7 +416,7 @@
                             <phase>process-classes</phase>
                         </execution>
                     </executions>
-                </plugin>
+                </plugin>-->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
@@ -422,7 +430,7 @@
             </plugins>
         </pluginManagement>
         <plugins>
-            <plugin>
+            <!--<plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
                 <executions>
@@ -509,7 +517,7 @@
                 <groupId>org.eluder.coveralls</groupId>
                 <artifactId>coveralls-maven-plugin</artifactId>
                 <version>${coveralls-maven-plugin.version}</version>
-            </plugin>
+            </plugin>-->
             <!--
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -529,7 +537,7 @@
         </plugins>
     </build>
     
-    <reporting>
+    <!--<reporting>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -594,7 +602,7 @@
                 </configuration>
             </plugin>
         </plugins>
-    </reporting>
+    </reporting>-->
     
     <repositories>
         <repository>
@@ -664,7 +672,7 @@
         </developer>
     </developers>
     
-    <distributionManagement>
+    <!--<distributionManagement>
         <snapshotRepository>
             <id>sonatype-nexus-snapshots</id>
             <url>https://oss.sonatype.org/content/repositories/snapshots</url>
@@ -673,5 +681,17 @@
             <id>sonatype-nexus-releases</id>
             <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
         </repository>
+    </distributionManagement>-->
+    <distributionManagement>
+        <repository>
+            <id>releases</id>
+            <name>Yame Repository</name>
+            <url>http://repo.hq.in.ecpark.cn:8081/nexus/content/repositories/releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>snapshots</id>
+            <name>Yame Repository</name>
+            <url>http://repo.hq.in.ecpark.cn:8081/nexus/content/repositories/snapshots/</url>
+        </snapshotRepository>
     </distributionManagement>
 </project>
